--- a/culture.html
+++ b/culture.html
@@ -22,7 +22,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-image" src="images/hero-image.jpg" alt="Rwandan landscape">
+        <img class="hero-image" src="images/fashion.jpg" alt="Rwandan landscape">
         <div class="hero-content">
             <h1>Discover Rwanda</h1>
             <p>The Land of a Thousand Hills</p>
@@ -36,19 +36,19 @@
     <main>
         <section class="content-section">
             <h2>Traditional Dance & Music</h2>
-            <div class="image-placeholder" style="background-image: url('../images/culture/dance.jpg');"></div>
+            <div class="image-placeholder" style="background-image: url('images/gorilla.jpg');"></div>
             <p>Rwanda's Intore dance, performed by specially trained dancers, is a captivating spectacle of rhythm, movement, and traditional costumes.</p>
         </section>
 
         <section class="content-section dark">
             <h2>Imigongo Art</h2>
-            <div class="image-placeholder" style="background-image: url('../images/culture/imigongo.jpg');"></div>
+            <div class="image-placeholder" style="background-image: url('images/memorial.jpg');"></div>
             <p>This unique cow dung art form features geometric patterns in black, white, and red, traditionally created by women.</p>
         </section>
 
         <section class="content-section">
             <h2>Ubumuntu - Rwandan Humanity</h2>
-            <div class="image-placeholder" style="background-image: url('../images/culture/community.jpg');"></div>
+            <div class="image-placeholder" style="background-image: url('images/canopy.jpg');"></div>
             <p>The concept of shared humanity forms the foundation of Rwandan social values and community life.</p>
         </section>
     </main>
