--- a/history.html
+++ b/history.html
@@ -22,7 +22,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-image" src="images/hero-image.jpg" alt="Rwandan landscape">
+        <img class="hero-image" src="images/city.jpg" alt="Rwandan landscape">
         <div class="hero-content">
             <h1>Discover Rwanda</h1>
             <p>The Land of a Thousand Hills</p>
@@ -70,19 +70,19 @@
         
         <section class="content-section">
             <h2>The Kingdom of Rwanda</h2>
-            <div class="image-placeholder" style="background-image: url('../images/history/kingdom.jpg');"></div>
+            <div class="image-placeholder" style="background-image: url('images/memorial.jpg');"></div>
             <p>For centuries, Rwanda was ruled by a Tutsi monarchy with a complex social structure that maintained order through cattle clientship.</p>
         </section>
 
         <section class="content-section dark">
             <h2>Colonial Era</h2>
-            <div class="image-placeholder" style="background-image: url('../images/history/colonial.jpg');"></div>
+            <div class="image-placeholder" style="background-image: url('images/gorilla.jpg');"></div>
             <p>German and later Belgian colonial rule exacerbated ethnic divisions through identity cards and favoritism.</p>
         </section>
 
         <section class="content-section">
             <h2>Modern Rwanda</h2>
-            <div class="image-placeholder" style="background-image: url('../images/history/kigali.jpg');"></div>
+            <div class="image-placeholder" style="background-image: url('images/canopy.jpg');"></div>
             <p>Since the 1994 genocide against the Tutsi, Rwanda has undergone remarkable transformation and reconciliation.</p>
         </section>
     </main>
