--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-image" src="images/hero-image.jpg" alt="Rwandan landscape">
+        <img class="hero-image" src="images/mountain.jpg" alt="Rwandan landscape">
         <div class="hero-content">
             <h1>Discover Rwanda</h1>
             <p>The Land of a Thousand Hills</p>
@@ -38,7 +38,7 @@
             <video autoplay muted loop playsinline class="hero-video">
                 <source src="videos/rwanda-hero.mp4" type="video/mp4">
                 <!-- Fallback image -->
-                <img src="images/hero-fallback.jpg" alt="Rwandan landscape">
+                <img src="images/lake kivu.jpg" alt="Rwandan landscape">
             </video>
             <div class="video-overlay"></div>
         </div>
@@ -82,7 +82,7 @@
                 <p class="section-subtitle">Explore Rwanda's vibrant traditions and arts</p>
                 <a href="culture.html" class="learn-more">Learn more</a>
                 <div class="image-container">
-                    <img src="images/culture/intore-dancers.jpg" alt="Intore dancers" data-src="images/culture/intore-dancers.jpg">
+                    <img src="images/fashion.jpg" alt="Fashion" data-src="images/fashion.jpg">
                 </div>
             </div>
         </section>
@@ -93,7 +93,7 @@
                 <p class="section-subtitle">Explore Rwanda's vibrant traditions and arts</p>
                 <a href="culture.html" class="learn-more">Learn more</a>
                 <div class="image-container">
-                    <img src="images/culture/intore-dancers.jpg" alt="Intore dancers" data-src="images/culture/intore-dancers.jpg">
+                    <img src="images/fashion.jpg" alt="Fashion" data-src="images/fashion.jpg">
                 </div>
             </div>
         </section>
@@ -104,7 +104,7 @@
                 <p class="section-subtitle">Explore Rwanda's vibrant traditions and arts</p>
                 <a href="culture.html" class="learn-more">Learn more</a>
                 <div class="image-container">
-                    <img src="images/culture/intore-dancers.jpg" alt="Intore dancers" data-src="images/culture/intore-dancers.jpg">
+                    <img src="images/fashion.jpg" alt="Fashion" data-src="images/fashion.jpg">
                 </div>
             </div>
         </section>
@@ -112,7 +112,7 @@
 
     <footer>
         <div class="footer-content">
-            <p>© 2023 Discover Rwanda. All rights reserved.</p>
+            <p>© 2025 Discover Rwanda. All rights reserved.</p>
         </div>
     </footer>
 
