--- a/tourism.html
+++ b/tourism.html
@@ -22,7 +22,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-image" src="images/hero-image.jpg" alt="Rwandan landscape">
+        <img class="hero-image" src="images/gorilla.jpg" alt="Rwandan landscape">
         <div class="hero-content">
             <h1>Discover Rwanda</h1>
             <p>The Land of a Thousand Hills</p>
