--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-image" src="images/hero-image.jpg" alt="Rwandan landscape">
+        <img class="hero-image" src="images/mountain.jpg" alt="Rwandan landscape">
         <div class="hero-content">
             <h1>Discover Rwanda</h1>
             <p>The Land of a Thousand Hills</p>
@@ -35,14 +35,14 @@
 
     <main class="gallery-container">
         <div class="gallery-grid">
-            <div class="gallery-item" style="background-image: url('../images/gallery/landscape1.jpg');"></div>
-            <div class="gallery-item" style="background-image: url('../images/gallery/culture1.jpg');"></div>
-            <div class="gallery-item" style="background-image: url('../images/gallery/wildlife1.jpg');"></div>
-            <div class="gallery-item" style="background-image: url('../images/gallery/city1.jpg');"></div>
-            <div class="gallery-item" style="background-image: url('../images/gallery/landscape2.jpg');"></div>
-            <div class="gallery-item" style="background-image: url('../images/gallery/culture2.jpg');"></div>
-            <div class="gallery-item" style="background-image: url('../images/gallery/wildlife2.jpg');"></div>
-            <div class="gallery-item" style="background-image: url('../images/gallery/city2.jpg');"></div>
+            <div class="gallery-item" style="background-image: url('images/city.jpg');"></div>
+            <div class="gallery-item" style="background-image: url('images/canopy.jpg');"></div>
+            <div class="gallery-item" style="background-image: url('images/gorilla.jpg');"></div>
+            <div class="gallery-item" style="background-image: url('images/memorial.jpg');"></div>
+            <div class="gallery-item" style="background-image: url('images/mountain.jpg');"></div>
+            <div class="gallery-item" style="background-image: url('images/fashion.jpg');"></div>
+            <div class="gallery-item" style="background-image: url('images/lake\ kivu.jpg');"></div>
+            <div class="gallery-item" style="background-image: url('images/city.jpg');"></div>
         </div>
         
         <div class="gallery-lightbox">
